@@ -53,6 +53,8 @@ Version 1.5.0+svn:
    * fix [teleport] capturing villages with the wrong side (bug #11683)
    * SideWML recruit= no longer locks the faction except if explicitely wanted
      with the new key faction_from_recruit=yes
+   * add "default_base" parameter to overlay terrains, which specifies the 
+     base terrain the editor draws by default.
  * wesnothd
    * added expiration time to bans
    * added restart command to server that does gracefull restart
